--- a/package.json
+++ b/package.json
@@ -3,9 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-polyfill": "6.8.0",
+    "bootstrap": "3.3.6",
+    "colors": "1.1.2",
+    "compression": "^1.6.1",
+    "cross-env": "1.0.7",
+    "css-loader": "0.23.1",
+    "enzyme": "^3.8.0",
+    "eventsource-polyfill": "0.9.6",
+    "expect": "1.19.0",
+    "express": "^4.16.4",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "0.8.5",
+    "jquery": "2.2.3",
+    "jsdom": "8.5.0",
+    "mocha": "2.4.5",
+    "nock": "8.0.0",
+    "npm-run-all": "1.8.0",
+    "open": "0.0.5",
     "react": "^16.6.3",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-redux": "^5.1.1",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "1.2.3",
+    "redux-mock-store": "1.0.2",
+    "redux-thunk": "^2.3.0",
+    "rimraf": "2.5.2",
+    "style-loader": "0.13.1",
+    "toastr": "2.1.2",
+    "url-loader": "0.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
