--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-promise-17",
+  "name": "redux-promise-16",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "cross-env": "1.0.7",
     "css-loader": "0.23.1",
     "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.19.0",
     "express": "^4.16.4",
@@ -17,17 +18,18 @@
     "file-loader": "0.8.5",
     "jquery": "2.2.3",
     "jsdom": "8.5.0",
-    "mocha": "2.4.5",
+    "mocha": "^5.2.0",
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
-    "react-router": "2.4.0",
+    "react-router": "^3.2.1",
     "react-router-redux": "4.0.4",
     "react-scripts": "2.1.1",
+    "react-test-renderer": "^16.6.3",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
@@ -38,6 +40,7 @@
     "url-loader": "0.5.7"
   },
   "scripts": {
+    "start_app": "npm-run-all --parallel start test",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
