--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsdom": "8.5.0",
     "mocha": "^5.2.0",
     "nock": "8.0.0",
+    "node-fetch": "^2.3.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "prop-types": "^15.6.2",
